2005-09-27	Gaius Mulley <gaius@glam.ac.uk>

	* finally fixed _toupper porting problem in p2c as reported
	  by Thomas Ahn <TAhnMaple@gmx.de>, Ed Smith-Rowland
	  <3dw4rd@verizon.net>, John o goyo <jgoyo@ca.inter.net>,
          Eduardo Abela <eabela@mac.com>, John Calley
	  <calleys@iquest.net> and many others.
	* finally fixed the linking problem when building under
	  opendarwin. I suspect this will fix the same problems
	  under MacOS.

2005-09-16	Gaius Mulley <gaius@glam.ac.uk>

	* implemented -Wpositive-mod-floor-div option
	* updated gm2/gm2.texi and added many switch testing
	  regression tests.

2005-09-13	Gaius Mulley <gaius@glam.ac.uk>

	* implemented REM
	* implemented MOD, DIV, / as per ISO, PIM2, PIM3, PIM4
	* updated gm2/gm2.texi documentation to reflect the rules

2005-09-12	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug reported by John B. Wallace, Jr <wallacjb@enter.net>
	  testsuite/gm2/pim/options/bounds/fail/IdentifierBug.mod
	* fixed bug reported by John B. Wallace, Jr <wallacjb@enter.net>
	  testsuite/gm2/testsuite/gm2/pim/pass/ABSBug.mod
	* fixed bug reported by John B. Wallace, Jr <wallacjb@enter.net>
	  testsuite/gm2/pim/run/pass/FpuIOBug.mod
	
2005-09-06	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug reported by John B. Wallace, Jr <wallacjb@enter.net>
          gm2-libs/StringConvert.mod incorrect assumption of negative valued
	  modulus operator.
	* added testsuite/gm2/pimlib/{logitech, ulm} with tests to check
	  that programs can be linked against logitech and the ulm libraries.
	* added testsuite/gm2/pim/run/pass/modulus.mod which tests for
	  various division and modulus cases.
	
2005-09-01	Gaius Mulley <gaius@glam.ac.uk>

	* implemented -Wdef=extension and -Wmod=extension switches
	  into GNU Modula-2 compiler and subcomponents (gm2l and gm2m).
	* documented the new switches in gm2/gm2.texi
	
2005-08-09	Gaius Mulley <gaius@glam.ac.uk>

	* fixed nested WITH statement bug and added